<resources>
    <string name="app_name">Lab3</string>
    <string name="result_string">Ваш результат:</string>
    <string name="play_btn_text">Грати ще</string>
    <string name="main_btn_text">На головну</string>
    <string name="exit_btn_text">Вихід</string>
    <string name="restul_view_text">0</string>
    <string name="rools_text">Чи співпадає назва кольору ліворуч з кольором текста праворуч?</string>
    <string name="yes_btn">Так</string>
    <string name="no_btn">Ні</string>
    <string name="color1_txt">Помаранчевий</string>
    <string name="color2_txt">Червоний</string>
    <string name="_01_00">01:00</string>
    <string name="_0">0</string>
    <string name="start_btn">Почати</string>
    <string name="exit_btn">Вихід</string>
    <string name="testing_mode">testing_mode</string>
    <string-array name="tags">
        <item>Червоний:-65536</item>
        <item>Зелений:-14435799</item>
        <item>Помаранчевий:-26368</item>
        <item>Жовтий:-598252</item>
        <item>Блакитний:-16728876</item>
        <item>Синій:-14401322</item>
        <item>Фіолетовий:-9422635</item>
        <item>Чорний:-16777216</item>
        <item>Рожевий:-841281027</item>

    </string-array>

</resources>